# brand-qa-assistant

./: .gitignore  Dockerfile  README.md  pyproject.toml
.azure/pipelines/: app.yml  infra.yml
brand_guidelines/: brand_instructions.md
infra/: main.bicep  main.bicepparam
infra/modules/: ai-foundry.bicep  container-app.bicep  container-registry.bicep  keyvault.bicep  storage.bicep
scripts/: bootstrap.sh  local_tunnel.sh
src/: config.py
src/agent/: client.py  prompts.py  runner.py  tools.py
src/ingestion/: ingest.py  pdf_uploader.py
src/screenshot/: capture.py  page_content.py
src/web/: app.py
src/web/static/: index.html
tests/unit/: test_runner.py
